# lab5-sem2-begsta

./: .gitignore  CMakeLists.txt  README.md  main.cpp
structData/: CMakeLists.txt  structData.cpp  structData.h
